--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <div class="container bg-black">
                 <div class="w-100 h-100 text-white">
                     <div class="row align-content-center">
-                        <div class="col text-capitalize text-center">
+                        <div class="col text-center">
                             <h3 class="display-3">Welcome to my personal Portfolio</h3>
-                             <h1 class="text-white mb-0"><a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Emile Van Wyk.", "I am Creative.", "I Love Design.", "I Love to Develop."]'>
+                             <h1 class="text-white mb-0"><a href="" class="typewrite" data-period="2000" data-type='[ "Hi, my name is Emile Van Wyk.", "I am an Creator.", "I Love Design.", "I Love to Develop."]'>
                             <span class="wrap"></span></a>
                             </h1>
                          </div>
@@ -89,22 +89,22 @@
     </header>
     <!-- end header -->
     <!-- begin main -->
-    <main class="bg-black">
+    <main class="bg-black bg-gradient">
         <!-- about start -->
         <section id="about">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col text-lg-center">
-                            <h1 class="display-1 text-white abo">About</h1>
+                    <div class="col-md text-lg-center">
+                            <h1 class="display-1 text-white text-center">About</h1>
                          </div>
                     </div>
                 </div>
-                <div class="container bg-gradient rounded-3">
+                <div class="container-fluid  bg-gradient rounded-3">
                     <div class="row">
-                        <div class="col-5">
+                        <div class="col-md-5">
                         <img src="./assets/images/Emile.JPG" alt="" class="img-fluid rounded-circle">
                         </div>
-                        <div class="col-7 bg-gradient">
+                        <div class="col-md-7 bg-gradient">
                             <h3 class="text-white">Web Developer</h3>
                             <p class="text-white about-content">Hi there, my name is Emile I'm a aspiring website designer from Cape Town, with a focus in UI/UX design and Web/App Development. I love to get new experiences and always learn from my surroundings. I'm still a student trying to build a name for myself. I looking forward to any opportunities and challenges.</p>
                             <table class="table table-responsive text-white ">
@@ -165,42 +165,42 @@
                               <h1 class="text-center bg-black text-white">SKILLS</h1>
                               <div class="container p-3 my-3 bg-gradient text-white">
                                   <div class="row">
-                                      <div class="col-4">
+                                      <div class="col-md-4">
                                           <h2>CSS</h2>
                                           <div class="progress">
                                               <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 45%">45%</div>
                                             </div>
                                             <br>
                                           </div>
-                                          <div class="col-4">
+                                          <div class="col-md-4">
                                               <h2>HTML</h2>
                                               <div class="progress">
                                                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%">60%</div>
                                               </div>
                                               <br>
                                           </div>
-                                          <div class="col-4">
+                                          <div class="col-md-4">
                                               <h2>PHP</h2>
                                               <div class="progress">
                                                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%">50%</div>
                                               </div>
                                               <br>
                                           </div>
-                                          <div class="col-4">
+                                          <div class="col-md-4">
                                               <h2>JAVASCRIPT</h2>
                                               <div class="progress">
                                                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 25%">25%</div>
                                               </div>
                                               <br>
                                           </div>
-                                          <div class="col-4">
+                                          <div class="col-md-4">
                                               <h2>CAMTASIA</h2>
                                               <div class="progress">
                                                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
                                               </div>
                                               <br>
                                           </div>
-                                          <div class="col-4">
+                                          <div class="col-md-4">
                                               <h2>VUE.JS</h2>
                                               <div class="progress">
                                                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 25%">25%</div>
