--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                           <li>
                             <hr class="dropdown-divider">
                           </li>
-                          <li><a class="dropdown-item" href="#">Skills</a></li>
+                          <li><a class="dropdown-item" href="#about">Skills</a></li>
                         </ul>
                       </li>
                       <li class="nav-item dropdown">
@@ -50,7 +50,7 @@
                           <li>
                             <hr class="dropdown-divider">
                           </li>
-                          <li><a class="dropdown-item" href="#">Projects</a></li>
+                          <li><a class="dropdown-item" href="#projects">Projects</a></li>
                         </ul>
                       </li>
                       <li class="nav-item">
@@ -101,10 +101,10 @@
                 </div>
                 <div class="container-fluid  bg-gradient rounded-3">
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-md-4">
                         <img src="./assets/images/Emile.JPG" alt="" class="img-fluid rounded-circle">
                         </div>
-                        <div class="col-md-7 bg-gradient">
+                        <div class="col-md-8 bg-gradient">
                             <h3 class="text-white">Web Developer</h3>
                             <p class="text-white about-content">Hi there, my name is Emile I'm a aspiring website designer from Cape Town, with a focus in UI/UX design and Web/App Development. I love to get new experiences and always learn from my surroundings. I'm still a student trying to build a name for myself. I looking forward to any opportunities and challenges.</p>
                             <table class="table table-responsive text-white ">
